[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elevenlabs"
version = "1.8.0"
description = ""
readme = "README.md"
authors = []
keywords = []
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]
packages = [
    { include = "elevenlabs", from = "src"}
]

dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "pydantic-core>=2.18.2,<3.0.0",
    "requests>=2.20",
    "typing_extensions>=4.0.0",
    "websockets>=11.0"
]

[project.urls]
Repository = 'https://github.com/elevenlabs/elevenlabs-python'
